<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add Task</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="priority">优先级</string>
    <string name="task_name">任务名称</string>
    <string name="placeholder">test</string>
    <string name="save">保存</string>
    <string name="fab_description">添加任务</string>
    <string name="pick_date">选择开始时间</string>
    <string name="start_date_hint">无开始日期</string>
    <string name="end_date_hint">无结束日期</string>
    <string name="subtask_tag">subtask</string>
    <string name="add_subtask">添加子任务</string>
    <string name="delete">删除</string>
    <string name="timer_controls">计时器</string>
    <string name="ctrl_timer_pref">ctrl_timer</string>
    <string name="TEA_timer_est">Est. %s</string>
    <string name="TEA_timer_elap">已进行 %s</string>
    <string name="TEA_timer_controls">计时器</string>
    <string name="gcal_TEA_showCalendar_label">点击添加日历</string>
    <string name="dont_add_to_calendar">不填加到日历</string>
    <string name="TEA_ctrl_gcal">TEA_ctrl_gcal</string>

    <!-- Default Calendar Preference Key (do not translate) -->
    <string name="gcal_p_default">default_calendar_id</string>

    <string name="calendar_event_not_found">找不到日历事件</string>
    <string name="gcal_TEA_error">添加任务到日历发生错误！</string>


</resources>