<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mytask.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_add_task"
            app:destination="@id/add_task">

        </action>
    </fragment>

    <fragment
        android:id="@+id/add_task"
        android:name="com.example.mytask.ui.addTask.AddTaskFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_add_task">
        <argument
            android:name="taskKey"
            app:argType="long"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mytask.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>