<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="addTaskViewModel"
            type="com.example.mytask.ui.addTask.AddTaskViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icon_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextDate"
                app:srcCompat="@drawable/ic_baseline_add_alarm_24" />


            <!--            <Button-->
<!--                android:id="@+id/date_picker_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:text="@string/pick_date"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/icon_start_time"-->
<!--                app:layout_constraintStart_toEndOf="@+id/icon_start_time"-->
<!--                app:layout_constraintTop_toTopOf="@+id/icon_start_time"-->
<!--                tools:ignore="UsingOnClickInXml" />-->

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/start_date_hint"
                app:layout_constraintEnd_toEndOf="@+id/task_name"
                app:layout_constraintStart_toEndOf="@+id/icon_start_time"
                app:layout_constraintTop_toBottomOf="@+id/task_name" />

            <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/editTextDate2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextDate2"
                app:srcCompat="@drawable/ic_baseline_schedule_24" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/end_date_hint"
                app:layout_constraintEnd_toEndOf="@+id/editTextDate"
                app:layout_constraintStart_toEndOf="@+id/icon_service_question"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />


            <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/service_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/service_question"
                app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

            <TextView
                android:id="@+id/service_question"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="@+id/editTextDate2"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

            <RadioGroup
                android:id="@+id/prio_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checkedButton="@id/prio_low"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/service_question"
                app:layout_constraintStart_toEndOf="@+id/service_question">

                <RadioButton
                    android:id="@+id/prio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> addTaskViewModel.onSetPriority(0)}"/>

                <RadioButton
                    android:id="@+id/prio_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> addTaskViewModel.onSetPriority(1)}"/>

                <RadioButton
                    android:id="@+id/prio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()-> addTaskViewModel.onSetPriority(2)}"/>

            </RadioGroup>


<!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--                android:id="@+id/round_up_switch"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:checked="true"-->
<!--                android:text="@string/placeholder"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="@id/service_question"-->
<!--                app:layout_constraintTop_toBottomOf="@id/service_question" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
